@@ -90,6 +90,28 @@ import|;
 end_import
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|regex
+operator|.
+name|Matcher
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|regex
+operator|.
+name|Pattern
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -415,6 +437,19 @@ operator|.
 name|search
 operator|.
 name|BoostQuery
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|CheckHits
 import|;
 end_import
 begin_import
@@ -2019,6 +2054,30 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
+name|CheckHits
+operator|.
+name|checkHitCollector
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|fullQuery
+operator|.
+name|build
+argument_list|()
+argument_list|,
+literal|"country"
+argument_list|,
+name|s
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|2
+block|}
+argument_list|)
+expr_stmt|;
 name|s
 operator|.
 name|search
@@ -7049,17 +7108,56 @@ argument_list|,
 literal|0.0f
 argument_list|)
 expr_stmt|;
+name|Matcher
+name|m
+init|=
+name|Pattern
+operator|.
+name|compile
+argument_list|(
+literal|"Score based on ([0-9]+) child docs in range from ([0-9]+) to ([0-9]+), best match:"
+argument_list|)
+operator|.
+name|matcher
+argument_list|(
+name|explanation
+operator|.
+name|getDescription
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Block Join description not matches"
+argument_list|,
+name|m
+operator|.
+name|matches
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Matched children not positive"
+argument_list|,
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|m
+operator|.
+name|group
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
 name|assertEquals
 argument_list|(
-name|String
-operator|.
-name|format
-argument_list|(
-name|Locale
-operator|.
-name|ROOT
-argument_list|,
-literal|"Score based on child doc range from %d to %d"
+literal|"Wrong child range start"
 argument_list|,
 name|hit
 operator|.
@@ -7069,17 +7167,90 @@ literal|1
 operator|-
 name|childId
 argument_list|,
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|m
+operator|.
+name|group
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Wrong child range end"
+argument_list|,
 name|hit
 operator|.
 name|doc
 operator|-
 literal|1
-argument_list|)
 argument_list|,
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|m
+operator|.
+name|group
+argument_list|(
+literal|3
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Explanation
+name|childWeightExplanation
+init|=
 name|explanation
+operator|.
+name|getDetails
+argument_list|()
+index|[
+literal|0
+index|]
+decl_stmt|;
+if|if
+condition|(
+literal|"sum of:"
+operator|.
+name|equals
+argument_list|(
+name|childWeightExplanation
 operator|.
 name|getDescription
 argument_list|()
+argument_list|)
+condition|)
+block|{
+name|childWeightExplanation
+operator|=
+name|childWeightExplanation
+operator|.
+name|getDetails
+argument_list|()
+index|[
+literal|0
+index|]
+expr_stmt|;
+block|}
+name|assertTrue
+argument_list|(
+literal|"Wrong child weight description"
+argument_list|,
+name|childWeightExplanation
+operator|.
+name|getDescription
+argument_list|()
+operator|.
+name|startsWith
+argument_list|(
+literal|"weight(child"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
